--- a/h5editor/index.html
+++ b/h5editor/index.html
@@ -9,6 +9,7 @@
     <meta name="renderer" content="webkit">
     <title>H5Editor</title>
     <link rel="stylesheet" href="http://g.alicdn.com/sj/dpl/1.5.1/css/sui-append.min.css">
+    <link rel="stylesheet" href="/back/src/css/perfect-scrollbar.css">
     <link rel="stylesheet" href="/back/src/fonts/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/back/dist/css/goh5.min.css?ver=1.0.6"/>
 </head>
