--- a/h5editor/index.html
+++ b/h5editor/index.html
@@ -7,8 +7,9 @@
     <meta name="keywords" content="H5,可视化,cms,编辑器">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
+    <link rel="shortcut icon" href=/back/favicon.ico type=image/x-icon>
     <title>H5Editor</title>
-    <link rel="stylesheet" href="http://g.alicdn.com/sj/dpl/1.5.1/css/sui-append.min.css">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/back/src/css/perfect-scrollbar.css">
     <link rel="stylesheet" href="/back/src/fonts/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/back/dist/css/goh5.min.css?ver=1.0.6"/>
